--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>io.nxnet.html2adoc</groupId>
     <artifactId>html2adoc</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     
     <name>html2adoc</name>
     <description>Java API for HTML to AsciiDoc Conversion</description>
@@ -22,7 +21,8 @@
         <url>https://github.com/nxnet/html2adoc</url>
         <connection>scm:git:git://github.com/nxnet/html2adoc.git</connection>
         <developerConnection>scm:git:git://github.com/nxnet/html2adoc.git</developerConnection>
-    </scm>
+      <tag>html2adoc-0.0.1</tag>
+  </scm>
 
     <distributionManagement>
         <snapshotRepository>
