Fixing scm connection settings

--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/nxnet/html2adoc</url>
-        <connection>scm:git:git://github.com/nxnet/html2adoc.git</connection>
-        <developerConnection>scm:git:git://github.com/nxnet/html2adoc.git</developerConnection>
+        <url>http://github.com/nxnet/html2adoc</url>
+        <connection>https://github.com/nxnet/html2adoc.git</connection>
+        <developerConnection>http://github.com/nxnet/html2adoc.git</developerConnection>
       <tag>html2adoc-0.0.1</tag>
   </scm>
 
